# LAME

./: .gitignore  CMakeLists.txt  README  README.md  env-setup.bat  env-setup.sh
BaseStation/: BaseStation.sln  JoystickLibrary.dll.metagen  env-setup.bat
BaseStation/BaseStation/: App.xaml  App.xaml.cs  BaseStation.csproj  Logger.cs  LoggerControl.xaml  LoggerControl.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Packet.cs  Util.cs
BaseStation/BaseStation/Packet/: Drive.cs  EStop.cs  Encoder.cs  Heartbeat.cs  Location.cs  Packet.cs  SwitchDriveMode.cs  Util.cs
BaseStation/BaseStation/Properties/: Resources.Designer.cs  Settings.Designer.cs
BaseStation/BaseStationFramework/: BaseStationFramework.vcxproj  BaseStationFramework.vcxproj.filters  Packet.hpp  Service.cpp  Service.hpp  ServiceMaster.cpp  ServiceMaster.hpp
BaseStation/BaseStationFrameworkNative/: BaseStationFrameworkNative.vcxproj  BaseStationFrameworkNative.vcxproj.filters
BaseStation/BaseStationPacket/: BaseStationPacket.vcxproj  BaseStationPacket.vcxproj.filters  PacketHandler.cpp  PacketHandler.h
Robot/: CMakeLists.txt  LAME.py  configure.bat  main.py  makefile  run.sh  setup.py
Robot/ai/: ai.py
Robot/apriltags/: Makefile
Robot/apriltags/common/: homography.h
Robot/apriltags/example/: apriltag_demo
Robot/include/: AprilTagsLocator.hpp  BLER.hpp  Packet.h  Serial.hpp  TcpClient.hpp  UdpSocket.hpp
Robot/include/packet/: Drive.hpp  Packet.hpp
Robot/include/services/: AIDriveService.hpp  DirectDriveService.hpp  RemoteDriveService.hpp  Service.hpp  ServiceMaster.hpp
Robot/include/util/: Serial.hpp  Timer.hpp  UdpSocket.hpp  bprintf.h
Robot/packet/: packet.py
Robot/src/: AprilTagsLocator.cpp  BLER.cpp  Serial.cpp  TcpClient.cpp  main.cpp
Robot/src/packet/: Drive.cpp  Packet.cpp
Robot/src/services/: AIDriveService.cpp  DirectDrive.cpp  DirectDriveService.cpp  Service.cpp  ServiceMaster.cpp
Robot/src/util/: Serial.cpp  Timer.cpp  UdpSocket.cpp
base_station/: CMakeLists.txt
base_station/BaseStation/: BaseStation.sln
base_station/BaseStation/BaseStation/: MainWindow.xaml.cs
base_station/BaseStation/BaseStation/Properties/: AssemblyInfo.cs
base_station/BaseStation/BaseStationFramework/: BaseStationFramework.vcxproj  BaseStationFramework.vcxproj.filters  Drive.cpp  Drive.hpp  Packet.cpp  Packet.hpp  Service.cpp  ServiceMaster.cpp  ServiceMaster.hpp  UdpSocket.cpp  UdpSocket.hpp  crc8.c  crc8.h
base_station/BaseStation/BaseStationFrameworkNative/: BaseStationFrameworkNative.vcxproj  BaseStationFrameworkNative.vcxproj.filters
base_station/src/: main.cpp
framework/: CMakeLists.txt
framework/include/: Drive.hpp  Framework.hpp  Packet.hpp  Serial.hpp  Service.hpp  ServiceMaster.hpp  Timer.hpp  UdpSocket.hpp
framework/src/: Drive.cpp  Packet.cpp  Serial.cpp  Service.cpp  ServiceMaster.cpp  Timer.cpp  UdpSocket.cpp
robot/: CMakeLists.txt
robot/include/: DirectDriveService.hpp  RemoteDriveService.hpp
robot/src/: RemoteDrive.cpp  main.cpp
